--- a/app/src/main/res/layout/event_card_view.xml
+++ b/app/src/main/res/layout/event_card_view.xml
@@ -21,11 +21,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:layout_weight="1"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:orientation="vertical">
 
