--- a/app/src/main/res/layout/event_card_view.xml
+++ b/app/src/main/res/layout/event_card_view.xml
@@ -13,7 +13,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/design_default_color_on_primary"
             android:orientation="horizontal">
 
             <ImageView
@@ -27,6 +26,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_weight="4"
                 android:orientation="vertical">
 
@@ -36,8 +36,8 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:text="TextView"
-                    android:textColor="@color/design_default_color_on_secondary"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/eventdescription"
@@ -47,9 +47,11 @@
                     android:ellipsize="end"
                     android:maxLines="4"
                     android:text="This is a long text that needs to be truncated after a certain number of words. The TextView will show three dots at the end to indicate that there is more text, but it is not visible."
-                    android:textColor="@color/design_default_color_on_secondary"
                     android:textSize="16sp" />
             </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+
 </LinearLayout>
