--- a/app/src/main/res/layout/fragment_qr_scanner.xml
+++ b/app/src/main/res/layout/fragment_qr_scanner.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textSize="40sp"
-        android:text="QR Scanner" />
+        android:text="QR Scanner"
+        android:textSize="40sp" />
 
 </FrameLayout>
