--- a/app/src/main/res/layout/tag_layout.xml
+++ b/app/src/main/res/layout/tag_layout.xml
@@ -8,7 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20px"
+        android:background="#FFFFFF"
         android:padding="20px"
         android:text="TextView"
+        android:textColor="#000000"
         android:textSize="16sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
