--- a/app/src/main/res/layout/horizontal_item_view.xml
+++ b/app/src/main/res/layout/horizontal_item_view.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="90dp"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
-    android:id="@+id/cardView"
     android:layout_marginBottom="10dp"
-    android:backgroundTint="#808080"
+    app:cardBackgroundColor="#808080"
     app:cardCornerRadius="10dp">
 
     <LinearLayout
@@ -17,19 +17,20 @@
         android:padding="5dp">
 
         <ImageView
+            android:id="@+id/hor_img"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:id="@+id/hor_img"
-            android:src="@drawable/coding"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:src="@drawable/coding" />
+
         <TextView
+            android:id="@+id/hor_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/hor_text"
-            android:textAlignment="center"
             android:layout_gravity="center"
             android:text="Club"
-            android:textSize="12sp"/>
+            android:textAlignment="center"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
