--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Red">#FF0000</color>
+    <color name="selected_green">#3CB043</color>
+    <color name="unselected_grey">#808080</color>
 </resources>
