--- a/app/src/main/res/layout/horizontal_item_view.xml
+++ b/app/src/main/res/layout/horizontal_item_view.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
     android:layout_width="90dp"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
     android:layout_marginBottom="10dp"
