--- a/app/src/main/res/layout/activity_per_event_view.xml
+++ b/app/src/main/res/layout/activity_per_event_view.xml
@@ -32,7 +32,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
-                android:layout_marginTop="10dp"
+                android:layout_margin="20dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -42,36 +42,35 @@
                     android:layout_below="@+id/image_poster"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="10dp"
-                    android:text="Time: "
+                    android:hint="Event Time: "
                     android:textColor="@color/white"
-                    android:textSize="22sp"
+                    android:textColorHint="@color/white"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/eventDisplayName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:layout_below="@+id/time_event"
-                    android:layout_gravity="left"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginTop="10dp"
-                    android:text="About: "
+                    android:layout_gravity="start"
+                    android:hint="Event Name"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
+                    android:textColorHint="@color/white"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/Description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:layout_below="@+id/eventDisplayName"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginTop="7dp"
-                    android:layout_marginEnd="50dp"
                     android:hint="Event Information"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
-                    android:textSize="17dp" />
+                    android:textSize="16dp" />
 
             </LinearLayout>
 
