--- a/app/src/main/res/layout/fragment_login_dialogue.xml
+++ b/app/src/main/res/layout/fragment_login_dialogue.xml
@@ -7,7 +7,11 @@
 
     <Button
         android:id="@+id/login_btn"
+        style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="login" />
+        android:backgroundTint="#8BC34A"
+        android:text="LOGIN"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp" />
 </FrameLayout>
