--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -63,6 +63,12 @@
             android:textSize="34sp"
             android:text="Interest Filter" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/interesttags"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
 
     </LinearLayout>
 
