--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,6 +8,14 @@
     android:padding="10dp"
     tools:context=".ProfileFragment">
 
+    <ImageView
+        android:id="@+id/profileImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        tools:src="@tools:sample/avatars" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,15 +23,15 @@
         android:orientation="horizontal" >
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
             android:layout_gravity="center"
             android:orientation="vertical" >
             <TextView
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:layout_weight="1"
                 android:textSize="28sp"
                 android:text="" />
@@ -33,18 +41,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:gravity="center"
                 android:layout_weight="1"
                 android:textSize="20sp"
                 android:text="" />
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/profileImage"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            tools:src="@tools:sample/avatars" />
+
     </LinearLayout>
 
 
@@ -59,8 +63,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_weight="1"
-            android:textSize="34sp"
+            android:gravity="center"
+            android:textSize="30sp"
             android:text="Interest Filter" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -70,7 +76,20 @@
             android:layout_weight="1" />
 
 
+        <Button
+            android:id="@+id/addInterest"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:backgroundTint="#3F51B5"
+            android:text="ADD INTERESTS"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+
     </LinearLayout>
+
 
     <Button
         android:id="@+id/logoutBtn"
