--- a/app/src/main/res/layout/activity_per_event_feedback.xml
+++ b/app/src/main/res/layout/activity_per_event_feedback.xml
@@ -14,9 +14,10 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:padding="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -28,7 +29,7 @@
             android:fontFamily="@font/alegreya_sc_bold_italic"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:id="@+id/feedbackRV"
