--- a/app/src/main/res/layout/activity_per_event_view.xml
+++ b/app/src/main/res/layout/activity_per_event_view.xml
@@ -165,6 +165,12 @@
                     android:textColor="@color/white"
                     android:textSize="24sp" />
 
+                <Button
+                    android:id="@+id/attend1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="attend" />
+
 
             </LinearLayout>
         </LinearLayout>
