solved ProfileFragment issue

--- a/app/src/main/res/layout/activity_per_event_view.xml
+++ b/app/src/main/res/layout/activity_per_event_view.xml
@@ -92,6 +92,14 @@
                     android:textColorHint="@color/white"
                     android:textSize="16sp" />
 
+                <TextView
+                    android:id="@+id/count"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Attendees:"
+                    android:textColor="#FFFFFF"
+                    android:visibility="gone" />
+
             </LinearLayout>
 
             <LinearLayout
