--- a/app/src/main/res/menu/main_activity_bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/main_activity_bottom_navigation_menu.xml
@@ -6,10 +6,10 @@
         android:icon="@drawable/event"
         android:title="Events" />
 
-    <item
-        android:id="@+id/qr_scanner"
-        android:icon="@drawable/qr_scanner"
-        android:title="Scanner" />
+<!--    <item-->
+<!--        android:id="@+id/qr_scanner"-->
+<!--        android:icon="@drawable/qr_scanner"-->
+<!--        android:title="Scanner" />-->
 
     <item
         android:id="@+id/profile"
