--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="Red">#FF0000</color>
     <color name="selected_green">#3CB043</color>
     <color name="unselected_grey">#808080</color>
+    <color name="nice_blue">#3F51B5</color>
 </resources>
